--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "knex": "^0.16.3",
-    "pg": "^7.8.0"
+    "pg": "^7.8.0",
+    "pryjs": "^1.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
