--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ deploy:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database quantified_self;' -U postgres
